Added link to stylesheet

--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <img src="./images/cookbook.jpg" alt="Rick & Morty Bust out of the portal">
+    <h1 class="h1">Morty & Ricked; Recipe Edition</h1>
+    <img class="image" src="./images/cookbook.jpg" alt="Rick & Morty Bust out of the portal">
     <ul>
         <li>
-            <a href="recipes/kalaxian-crystals.html">Kalaxian Crystals</a>
+            <a href="recipes/kalaxian-crystals.html" class="page-link">Kalaxian Crystals</a>
         </li>
         <li>
-            <a href="recipes/hot-dog-rick.html">Hot Dogs on a Rick</a>
+            <a href="recipes/hot-dog-rick.html" class="page-link">Hot Dogs on a Rick</a>
         </li>
         <li>
-            <a href="recipes/portal-mash.html">Cauliflower Portal Mash</a>
+            <a href="recipes/portal-mash.html" class="page-link">Cauliflower Portal Mash</a>
         </li>
     </ul>
 </body>
