Add classes and link to stylesheet

--- a/recipes/hot-dog-rick.html
+++ b/recipes/hot-dog-rick.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width>, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Hot Dogs On A Rick</h1>
-    <img src="../images/hotdog-rick.png" alt="Adventures on a hot dog">
-    <h2>Note from Rick</h2>
+    <h1 class="h1">Hot Dogs On A Rick</h1>
+    <img class="image" src="../images/hotdog-rick.png" alt="Adventures on a hot dog">
+    <h2 class="h2">Note from Rick</h2>
     <p>
         Like Hot Dogs on a stick...get it?
     </p>
-    <h2>Ingredients</h2>
+    <h2 class="h2">Ingredients</h2>
     <ul>
         <li>6 Skewers</li>
         <li>6 Hot Dogs</li>
@@ -28,7 +29,7 @@
         <li>1 Cup Milk</li>
         <li>1 Egg</li>
     </ul>
-    <h2>Put it all together</h2>
+    <h2 class="h2">Put it all together</h2>
     <ol>
         <li>Insert skewers lengthwise through the hotdog then set aside.</li>
         <li>Lay down 1 piece of sliced cheese, then place hot dog horizontally across it and wrap it up. Refrigerate for 10 to 15 min.</li>
