--- a/recipes/kalaxian-crystals.html
+++ b/recipes/kalaxian-crystals.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Kalaxian Crystals</h1>
-    <img src="../images/kalaxian-crystals.png" alt="2 tall glasses of Kalaxian Crystals">
-    <h2>Note from Rick</h2>
+    <h1 class="h1">Kalaxian Crystals</h1>
+    <img class="image" src="../images/kalaxian-crystals.png" alt="2 tall glasses of Kalaxian Crystals">
+    <h2 class="h2">Note from Rick</h2>
     <p>
         Dear Morty's Teacher, I know your 'honorable' professionloathes sugar as it makes it more difficult for you to fill young minds with your useless dribble, but im here to tell you to...suck it! And by 'it', I obviously mean my delicious Kalaxian Crystals! Haha! See what I did there?
     </p>
-    <h2>Ingredients</h2>
+    <h2 class="h2">Ingredients</h2>
     <ul>
         <li>1 cup water</li>
         <li>Skewers</li>
@@ -24,7 +25,7 @@
         <li>Coffee Filter</li>
         <li>Rubber Band</li>
     </ul>
-    <h2>Put it all together</h2>
+    <h2 class="h2">Put it all together</h2>
     <ol>
         <li>Wet skewer with water, then roll in granulated sugar, leaving at least 2 inches bare to use as a handle. Set aside to dry completely. This will form a place for the crystals to start growing.</li>
         <li>Fasten a clothespin horizontally across the bare end of the skewer. Rest skewer in the jar such that the clothespin spans the top. The skewer shouldn't touch the bottom of the jar.</li>
