--- a/recipes/portal-mash.html
+++ b/recipes/portal-mash.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Hot Dogs On A Rick</h1>
-    <img src="../images/portal-mash.png" alt="Green and gooey portal mash">
-    <h2>Note from Rick</h2>
+    <h1 class="h1">Hot Dogs On A Rick</h1>
+    <img class="image" src="../images/portal-mash.png" alt="Green and gooey portal mash">
+    <h2 class="h2">Note from Rick</h2>
     <p>
         So here's another "Morty Recipe" I kind of changed up myself!(For that extra credit?)
     </p>
@@ -18,7 +19,7 @@
     <p>
         It's like mashed potatoes - but CAULIFLOWER!
     </p>
-    <h2>Ingredients</h2>
+    <h2 class="h2">Ingredients</h2>
     <ul>
         <li>2 Heads Green Cauliflower, Broken Down</li>
         <li>2 Cloves of Garlic, peeled</li>
@@ -31,7 +32,7 @@
         <li>2 Tablespoons of Pesto</li>
         <li>2 Tablespoons Crema</li>
     </ul>
-    <h2>Put it all together</h2>
+    <h2 class="h2">Put it all together</h2>
     <ol>
         <li>Set water to simmer in a medium pot then cook the cauliflower and garlic until tender.</li>
         <li>Transfer veggies to a food processor, add butter, broth, salt and lemon juice. Puree until smooth then transfer to a round serving dish.</li>
